testsuite/tests/typecheck/should_fail/T15799.stderr

T15799.hs:46:62: error:
    Expected a constraint, but ‘UnOp b <= a’ has kind ‘*’

T15799.hs:46:67: error:
    • Couldn't match kind ‘Nat’ with ‘Op Nat’
      Expected kind ‘Op (Op Nat)’, but ‘b’ has kind ‘Op Nat’
    • In the first argument of ‘UnOp’, namely ‘b’
      In the first argument of ‘(<=)’, namely ‘UnOp b’
